k0s-cluster/kyverno-post/templates/policy-frigate.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: schedule-frigate-on-nvr-node
spec:
  rules:
    - name: add-nodeselector
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: ["frigate", "go2rtc"]
      mutate:
        patchStrategicMerge:
          spec:
            nodeSelector:
              role: nvr
            tolerations:
              - key: "role"
                operator: "Equal"
                value: "nvr"
                effect: "NoSchedule"

---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: keep-others-off-nvr-node
spec:
  rules:
    - name: add-antiaffinity
      match:
        any:
          - resources:
              kinds: [Pod]
      exclude:
        any:
          - resources:
              namespaces: ["frigate", "go2rtc", "kube-system", "longhorn-system", "metallb-system"]
      mutate:
        patchStrategicMerge:
          spec:
            affinity:
              nodeAffinity:
                requiredDuringSchedulingIgnoredDuringExecution:
                  nodeSelectorTerms:
                    - matchExpressions:
                        - key: role
                          operator: NotIn
                          values: ["nvr"]
